--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==20.3.0
 autopep8==1.5.4
 bleach==3.2.1
 certifi==2020.12.5
@@ -9,16 +10,20 @@ cryptography==3.3.1
 docutils==0.16
 idna==2.10
 importlib-metadata==3.10.0
+iniconfig==1.1.1
 jeepney==0.6.0
 keyring==21.8.0
 packaging==20.8
 pkginfo==1.6.1
+pluggy==0.13.1
 prettytable==2.0.0
+py==1.10.0
 pycodestyle==2.6.0
 pycparser==2.20
 Pygments==2.7.3
 pyparsing==2.4.7
-python-script-manager==1.0.8
+pytest==6.2.2
+python-script-manager==1.0.9
 readme-renderer==28.0
 requests==2.25.1
 requests-toolbelt==0.9.1
