--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,4 @@
-attrs==20.3.0
-autopep8==1.5.4
-bleach==3.2.1
-certifi==2020.12.5
-cffi==1.14.4
-chardet==4.0.0
-click==7.1.2
-colorama==0.4.4
-cryptography==3.3.1
-docutils==0.16
-idna==2.10
-importlib-metadata==3.10.0
-iniconfig==1.1.1
-jeepney==0.6.0
-keyring==21.8.0
-packaging==20.8
-pkginfo==1.6.1
-pluggy==0.13.1
-prettytable==2.0.0
-py==1.10.0
-pycodestyle==2.6.0
-pycparser==2.20
-pyfiglet==0.8.post1
-Pygments==2.7.3
-pyparsing==2.4.7
-pytest==6.2.2
-python-script-manager==1.1.0
-readme-renderer==28.0
-requests==2.25.1
-requests-toolbelt==0.9.1
-rfc3986==1.4.0
-SecretStorage==3.3.0
-six==1.15.0
-termcolor==1.1.0
-termcolor2==0.0.3
-toml==0.10.2
-tqdm==4.55.1
-twine==3.3.0
-urllib3==1.26.2
-wcwidth==0.2.5
-webencodings==0.5.1
-zipp==3.4.1
+click
+python-script-manager
+pyfiglet
+PyInquirer
